Pause occlusion tracking when reordering native views.

Reordering native views causes multiple changes to the window tree.
This CL instantiates a ScopedPauseOcclusionTracking in
DesktopNativeWidgetAura to ensure that occlusion is recomputed after
the reordering is done rather than after each individual change.

Note: It has been discussed that occlusion should be recompute once
per frame if the window tree has changed since the last frame, rather
than in direct response to window tree changes. That would fix this
issue. However, it is a more involved change, so having this simple
fix in the meantime is still relevant. https://crbug.com/832645

Bug: 829918, 832645
Change-Id: I043be75b53ee10683f8bd5bdbe298bdbcf54a987
Reviewed-on: https://chromium-review.googlesource.com/1010602
Reviewed-by: Sadrul Chowdhury <sadrul@chromium.org>
Commit-Queue: François Doray <fdoray@chromium.org>
Cr-Commit-Position: refs/heads/master@{#550750}
Former-commit-id: 8a67aa878448792b3e57c219663a3965c41c953b