ui/aura/window_occlusion_tracker.cc
@@ -142,10 +142,13 @@ WindowOcclusionTracker* WindowOcclusionTracker::GetInstance() {
 }
 
 void WindowOcclusionTracker::MaybeComputeOcclusion() {
-  if (g_num_pause_occlusion_tracking || num_times_occlusion_recomputed_ != 0)
+  if (g_num_pause_occlusion_tracking ||
+      num_times_occlusion_recomputed_in_current_step_ != 0) {
     return;
+  }
 
-  base::AutoReset<int> auto_reset(&num_times_occlusion_recomputed_, 0);
+  base::AutoReset<int> auto_reset(
+      &num_times_occlusion_recomputed_in_current_step_, 0);
 
   // Recompute occlusion states until either:
   // - They are stable, i.e. calling Window::SetOcclusionState() on all tracked
@@ -157,9 +160,11 @@ void WindowOcclusionTracker::MaybeComputeOcclusion() {
   // |kMaxComputeOcclusionIterationsBeforeStable| times and are still not
   // stable, iterate one last time to set the occlusion state of all tracked
   // windows based on IsVisible().
-  while (num_times_occlusion_recomputed_ <= kMaxRecomputeOcclusion) {
+  while (num_times_occlusion_recomputed_in_current_step_ <=
+         kMaxRecomputeOcclusion) {
     const bool exceeded_max_num_times_occlusion_recomputed =
-        num_times_occlusion_recomputed_ == kMaxRecomputeOcclusion;
+        num_times_occlusion_recomputed_in_current_step_ ==
+        kMaxRecomputeOcclusion;
     bool found_dirty_root = false;
 
     // Compute occlusion states and store them in |tracked_windows_|. Do not
@@ -177,10 +182,11 @@ void WindowOcclusionTracker::MaybeComputeOcclusion() {
       }
     }
 
-    ++num_times_occlusion_recomputed_;
-
     if (!found_dirty_root)
       break;
+
+    ++num_times_occlusion_recomputed_;
+    ++num_times_occlusion_recomputed_in_current_step_;
 
     // Call Window::SetOcclusionState() on tracked windows. A WindowDelegate may
     // change the window tree in response to this.
@@ -355,13 +361,15 @@ void WindowOcclusionTracker::MarkRootWindowAsDirty(
   // Generate a crash report when a root window is marked as dirty and occlusion
   // states have been recomputed |kMaxRecomputeOcclusion| times, because it
   // indicates that they are not stabilizing. Don't report it when
-  // |num_times_occlusion_recomputed_| is greater than |kMaxRecomputeOcclusion|
-  // to avoid generating multiple reports from the same client.
+  // |num_times_occlusion_recomputed_in_current_step_| is greater than
+  // |kMaxRecomputeOcclusion| to avoid generating multiple reports from the same
+  // client.
   //
   // TODO(fdoray): Remove this once we are confident that occlusion states are
   // stable after |kMaxRecomputeOcclusion| iterations in production.
   // https://crbug.com/813076
-  if (num_times_occlusion_recomputed_ == kMaxRecomputeOcclusion) {
+  if (num_times_occlusion_recomputed_in_current_step_ ==
+      kMaxRecomputeOcclusion) {
     was_occlusion_recomputed_too_many_times_ = true;
     base::debug::DumpWithoutCrashing();
   }
