ui/aura/test/window_occlusion_tracker_test_api.h
@@ -15,6 +15,9 @@ class WindowOcclusionTrackerTestApi {
   WindowOcclusionTrackerTestApi();
   ~WindowOcclusionTrackerTestApi();
 
+  // Returns the number of times that occlusion was recomputed in this process.
+  int GetNumTimesOcclusionRecomputed() const;
+
   // Returns true if WindowOcclusionTracker had to recompute occlusion too many
   // times before becoming stable since the last call to this.
   bool WasOcclusionRecomputedTooManyTimes();
